<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="dosports.dosports.Login"
    android:background="@color/fondo">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo"
        android:id="@+id/imageView"
        android:src="@drawable/logo"
        android:layout_above="@+id/etu"
        android:layout_alignRight="@+id/bLogin"
        android:layout_alignEnd="@+id/bLogin" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etu"
        android:layout_above="@+id/etp1Mod"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/etp1Mod"
        android:hint="@string/usuario" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/contraseña"
        android:ems="10"
        android:id="@+id/etp1Mod"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/acceder"
        android:id="@+id/bLogin"
        android:layout_marginTop="51dp"
        android:layout_below="@+id/etp1Mod"
        android:textColor="@color/blanco"
        android:background="@color/primario"
        android:textStyle="bold"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/accesoReg"
        android:id="@+id/textView"
        android:layout_below="@+id/bLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp"
        android:onClick="accesoARegistro" />

</RelativeLayout>
